syntax = "proto3";

option go_package = "./pb";

service EventService {
    rpc SendEvent(EventRequest) returns (EventResponse);
}

message EventRequest {
    string date = 1;
    string category = 2;
    string desc = 3;
    double amount = 4;
  }
  
  message EventResponse {
    string result = 1;
  }